--- a/regex.ipynb
+++ b/regex.ipynb
@@ -18,7 +18,9 @@
     "id": "-7ZMKeWCrBiZ"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Hello world')"
+   ]
   },
   {
    "cell_type": "markdown",
