--- a/regex.ipynb
+++ b/regex.ipynb
@@ -127,7 +127,7 @@
    },
    "source": [
     "RegEx Module\n",
-    "Python has a built-in package called re, which can be used to work with Regular Expressions.\n",
+    "Python has a built-in package called re, fffff which can be used to work with Regular Expressions.\n",
     "\n",
     "Import the re module:"
    ]
